[gd_scene load_steps=2 format=1]

[ext_resource path="res://MatierePremiere.gd" type="Script" id=1]

[node name="Node2DMatierePremiere" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 367.0
margin/bottom = 91.0

[node name="LabelName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 13.0
margin/right = 99.0
margin/bottom = 27.0
text = "MP_NOM"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelPrice" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 111.0
margin/top = 13.0
margin/right = 151.0
margin/bottom = 27.0
text = "Prix"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditPrice" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 109.0
margin/top = 37.0
margin/right = 186.0
margin/bottom = 61.0
text = "PRICE"
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LabelStock" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 203.0
margin/top = 10.0
margin/right = 243.0
margin/bottom = 24.0
text = "Stock"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditStock" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 199.0
margin/top = 36.0
margin/right = 276.0
margin/bottom = 60.0
text = "STOCK"
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LabelBuy" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 284.0
margin/top = 10.0
margin/right = 340.0
margin/bottom = 24.0
text = "Ã€ acheter"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBoxBuy" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 282.0
margin/top = 35.0
margin/right = 356.0
margin/bottom = 59.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 20.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""


